Continuing better error reporting on client side. Minor fixes to html. Made some improvements so score cards with long color or location labels will fit better on small screens and fixed bug with responsive score card table initialization.  Changed schema to store birth_date. Corresponding changes to loadClimbers and results. Added more information to the results export report.

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -211,6 +211,13 @@ table.scTable td {
     line-height: 1.4em;
     padding: .4em .5em;
 }
+/* xxx think about this, tie to media query? */
+.scTable th.ui-table-priority-2,
+.scTable td.ui-table-priority-2 {
+    max-width: 56px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
 
 .ui-table td.num {
     text-align: right;
